<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroUsuario">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="220dp"
        android:layout_height="32dp"
        android:fontFamily="cursive"
        android:text="@string/txtregistro"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/reusuario"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/reusuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.084" />

    <Spinner
        android:id="@+id/rsestado"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:entries="@array/rs_estado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsrol"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/recontrasenav"
        android:layout_width="263dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/recontrasenav"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/rbguardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recontrasena"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/rsrol"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:layout_marginBottom="112dp"
        android:entries="@array/rs_rol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refeccreacion"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/recontrasena"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/recontrasena"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reusuario"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/refeccreacion"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/refeccreacion"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recontrasenav"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/rbguardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:onClick="rbguardarusu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />


</androidx.constraintlayout.widget.ConstraintLayout>